# FeathrTalk

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/chat/: chat_connection.rs  chat_message.rs  chat_server.rs  messages.rs  mod.rs  text_chat.rs
backend/src/models/: chat_model.rs  friend_request_model.rs  message_model.rs  mod.rs  user_model.rs
backend/src/repository/: friend_request_repo.rs  mod.rs  mongodb_repo.rs  user_repo.rs
backend/src/routes/: mod.rs  start_connection.rs  user_api.rs
backend/src/utils/: client_serializer.rs  mod.rs
feathrtalk_frontend/: README.md  pubspec.yaml
feathrtalk_frontend/android/app/: build.gradle
feathrtalk_frontend/ios/Runner/: Info.plist
feathrtalk_frontend/ios/Runner.xcodeproj/: project.pbxproj
feathrtalk_frontend/lib/: main.dart
feathrtalk_frontend/lib/models/: login_data.dart  login_data.g.dart  user_credentials.dart  user_tokens.dart  user_tokens.g.dart
feathrtalk_frontend/lib/pages/: chat.dart  chats.dart  entry.dart  home.dart  login.dart  onboarding.dart  register.dart  welcome_page.dart
feathrtalk_frontend/lib/providers/: auth_provider.dart  chat_provider.dart  notification_provider.dart  websocket_provider.dart
feathrtalk_frontend/lib/services/: http_service.dart  shared_preferences.dart  user_data_service.dart  user_data_service.g.dart
feathrtalk_frontend/linux/: CMakeLists.txt  my_application.cc
feathrtalk_frontend/test/: widget_test.dart
feathrtalk_frontend/web/: index.html  manifest.json
feathrtalk_frontend/windows/: CMakeLists.txt
(+14 files in other folders)
