[package]
name = "FeathrTalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3.0"
mongodb = "2.0"
actix-web-actors="3" # actors specific to web
uuid = { version = "0.8", features = ["v4", "serde"] } # uuid's fit well in this context.
serde = "1.0"
serde_json = "1.0"