[package]
name = "FeathrTalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3.0"
futures = "0.3"
actix-web-actors="3" # actors specific to web
uuid = { version = "0.8", features = ["v4", "serde"] } # uuid's fit well in this context.
serde = "1.0"
dotenv = "0.15.0"
serde_json = "1.0"
chrono = "0.4.24"
serde_with = "3.0.0"

[dependencies.mongodb]
    version = "2.2.0"
    default-features = false
    features = ["sync"]
